syntax = "proto3";
package tech.gklijs.bkes.api;

service Bkes {
  rpc Start (StartRequest) returns (StartReply);
  rpc Add (AddRequest) returns (AddReply);
  rpc Retrieve (RetrieveRequest) returns (RetrieveReply);
}

message Error {
  enum Type {
    USER = 0;
    CONCURRENCY = 1;
    SERVER = 2;
  }
  Type type = 1;
  string error = 2;
  string cause = 3;
}

message StoreSuccess {
  int32 partition = 2;
  int64 offset = 3;
  int64 timestamp = 4;
}

message Record {
  bytes value = 1;
  int32 partition = 2;
  int64 offset = 3;
  int64 timestamp = 4;
}

message StoredRecords {
  repeated Record records = 1;
}

message StartRequest {
  bytes key = 1;
  bytes value = 2;
}

message StartReply {
  oneof reply {
    StoreSuccess success = 1;
    Error error = 2;
  }
}

message AddRequest {
  bytes key = 1;
  bytes value = 2;
  uint32 order = 3;
}

message AddReply {
  oneof reply {
    StoreSuccess success = 1;
    Error error = 2;
  }
}

message RetrieveRequest {
  bytes key = 1;
}

message RetrieveReply {
  oneof reply {
    StoredRecords success = 1;
    Error error = 2;
  }
}